--- a/assets/css/search_page.scss
+++ b/assets/css/search_page.scss
@@ -3,6 +3,15 @@
 @import "./component-chosen.css";
 @import "~virtual-keyboard/dist/css/keyboard.min.css";
 
+div.dataTables_wrapper {
+    width: 90vw;
+    margin: 0 auto;
+
+    div.dataTables_processing {
+        width: 300px;
+    }
+}
+
 /* Texte par défaut du choix multiple */
 .chosen-container-multi .chosen-choices .search-field input[type="text"] {
     color: lighten($body-color, 60%);
